// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox [NEGATIVE] should render with wrong props 1`] = `
.c2 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem 1fr;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  margin-top: 0.59375rem;
  -webkit-transition: color 300ms cubic-bezier(0.45,0.05,0,1);
  transition: color 300ms cubic-bezier(0.45,0.05,0,1);
}

.c0 {
  display: inline-block;
}

.c0 input {
  display: none;
}

.c0 .c3 > svg > :nth-child(1) {
  -webkit-transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
  fill: #FFFFFF;
}

.c0:hover > .c1 {
  cursor: pointer;
}

.c0:hover .c3 > svg > :nth-child(1) {
  fill: #ECF1FC;
  stroke: #B3C6F1;
}

<body>
  <div>
    <div
      class="c0"
    >
      <label
        class="c1 c2"
        for="checkbox_1"
      >
        <div
          class="c3 c4"
        >
          <svg />
        </div>
        <div
          class="c5"
          data-testid="checkbox-label"
        />
      </label>
      <input
        data-testid="checkbox"
        id="checkbox_1"
        type="checkbox"
      />
    </div>
  </div>
</body>
`;

exports[`Checkbox [NEGATIVE] should render without props 1`] = `
.c2 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: inline-block;
}

.c0 input {
  display: none;
}

.c0 .c3 > svg > :nth-child(1) {
  -webkit-transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
  fill: #FFFFFF;
}

.c0:hover > .c1 {
  cursor: pointer;
}

.c0:hover .c3 > svg > :nth-child(1) {
  fill: #ECF1FC;
  stroke: #B3C6F1;
}

<body>
  <div>
    <div
      class="c0"
    >
      <label
        class="c1 c2"
        for="checkbox_1"
      >
        <div
          class="c3 c4"
        >
          <svg />
        </div>
      </label>
      <input
        data-testid="checkbox"
        id="checkbox_1"
        type="checkbox"
      />
    </div>
  </div>
</body>
`;

exports[`Checkbox test checkbox disabled state 1`] = `
.c1 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c3 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: inline-block;
}

.c0 input {
  display: none;
}

.c0 .c2 > svg > :nth-child(1) {
  -webkit-transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #DBDBDB;
  fill: rgba(219,219,219,0.2);
}

.c0:hover .c2 > svg > :nth-child(1) {
  stroke: #DBDBDB;
}

<body>
  <div>
    <div
      class="c0"
      disabled=""
    >
      <label
        class="c1"
        for="checkbox_1"
      >
        <div
          class="c2 c3"
        >
          <svg />
        </div>
      </label>
      <input
        data-testid="checkbox"
        disabled=""
        id="checkbox_1"
        type="checkbox"
      />
    </div>
  </div>
</body>
`;

exports[`Checkbox test radio click 1`] = `
.c2 {
  display: inline-grid;
  gap: 0.25rem;
  grid-template-columns: 2.5rem;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c4 {
  width: 2.5rem;
  height: 2.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  display: inline-block;
}

.c0 input {
  display: none;
}

.c0 .c3 > svg > :nth-child(1) {
  -webkit-transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  transition: stroke 300ms cubic-bezier(0.45,0.05,0,1),fill 300ms cubic-bezier(0.45,0.05,0,1);
  stroke: #B3C6F1;
  fill: #FFFFFF;
}

.c0:hover > .c1 {
  cursor: pointer;
}

.c0:hover .c3 > svg > :nth-child(1) {
  fill: #ECF1FC;
  stroke: #B3C6F1;
}

<body>
  <div>
    <div
      class="c0"
    >
      <label
        class="c1 c2"
        for="checkbox_1"
      >
        <div
          class="c3 c4"
        >
          <svg />
        </div>
      </label>
      <input
        data-testid="checkbox"
        id="checkbox_1"
        type="checkbox"
      />
    </div>
  </div>
</body>
`;
